<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/ic_page_border">

  <ImageView
    android:id="@+id/resBackground"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="150dp"
    android:layout_marginBottom="160dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:alpha=".33"
    android:contentDescription="@string/dosage_choice_res_logo"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.569"
    app:srcCompat="@drawable/pic"/>
  <Spinner
    android:id="@+id/dosage_spinner"
    android:layout_width="105dp"
    android:layout_height="55dp"
    android:layout_marginTop="10dp"
    android:layout_marginStart="100dp"
    android:entries="@array/dosage_choice_title"
    android:spinnerMode="dropdown"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/dosage_message"/>
  <TextView
    android:id="@+id/dosage_message"
    android:layout_width="520dp"
    android:layout_height="177dp"
    android:layout_marginTop="30dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:gravity="center"
    android:text="@string/dosage_choice_message"
    android:textSize="35sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>
  <Button
    android:id="@+id/confirmDosage"
    android:layout_width="97dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="100dp"
    android:background="@drawable/ic_button_rectangle"
    android:text="@string/dosage_choice_confirm"
    android:textColor="#000000"
    android:textSize="16sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/dosage_message"/>
</android.support.constraint.ConstraintLayout>