<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/res_logo"
  app:layout_behavior="@string/appbar_scrolling_view_behavior"
  tools:context=".MedicationChoiceActivity"
  tools:showIn="@layout/activity_medication_choice">

  <Button
    android:id="@+id/medication"
    style="@style/Widget.AppCompat.Button.Colored"
    android:layout_width="150dp"
    android:layout_height="50dp"
    android:layout_marginTop="435dp"
    android:layout_marginBottom="201dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="30dp"
    android:background="@drawable/ic_button_round"
    android:text="Buprenorphine"
    android:textColor="#ffffff"
    android:textSize="18dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/abstain"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>
  <Button
    android:id="@+id/abstain"
    style="@style/Widget.AppCompat.Button.Colored"
    android:layout_width="150dp"
    android:layout_height="50dp"
    android:layout_marginTop="435dp"
    android:layout_marginBottom="201dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="10dp"
    android:background="@drawable/ic_button_round"
    android:text="Abstain"
    android:textColor="#ffffff"
    android:textSize="18dp"
    app:layout_constraintBaseline_toBaselineOf="@+id/medication"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/medication"
    app:layout_constraintTop_toTopOf="parent"/>
  <TextView
    android:textStyle="bold"
    android:layout_width="350dp"
    android:layout_height="150dp"
    android:layout_marginTop="102dp"
    android:layout_marginBottom="217dp"
    android:text="Would you like to take Buprenorphine or abstain?"
    android:textSize="35sp"
    android:textColor="#000000"
    android:gravity="center"
    app:layout_constraintBottom_toTopOf="@+id/abstain"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    />
</android.support.constraint.ConstraintLayout>