...
    app:layout_constraintBaseline_toBaselineOf="@+id/medication"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/medication"
    app:layout_constraintTop_toTopOf="parent"/>
  <TextView
    android:id="@+id/textViewMed"
    android:textStyle="bold"
    android:layout_width="350sp"
    android:layout_height="150sp"
    android:layout_marginTop="140dp"
    android:layout_marginBottom="317dp"
    android:gravity="center"
...
